feat: add ocr
